[x] Fixed a bug that showed up on the tablet where the writeblock guide     would cause the whole screen to shift when it got to the end of a line [+] Added the feature to more easily scale the board.  Now you can set     the scale with one parameter and everything with the board changes     to accept that new scale, such as the background grid and writblock     guide.

--- a/www/css/writeblock.css
+++ b/www/css/writeblock.css
@@ -48,10 +48,6 @@ html, body {
 	z-index:-10;
 }
 
-#return-button {
-	height:25px;
-}
-
 #mask {
 	position:absolute;
 	right:0px;
@@ -63,3 +59,54 @@ html, body {
 	z-index=10;
 	visibility:hidden;
 }
+
+.button {
+	border: 1px solid black;
+	width: 120px;
+	float:left;
+	height:15px;
+}
+
+.small {
+	width:40px;
+}
+
+#newline {
+	background:grey;
+	float:right;
+}
+
+#oldline {
+	background:darkgrey;
+	float:right;
+}
+
+#move-left {
+	background:pink;
+}
+
+#erase {
+	background:lightblue;
+}
+
+#insert-bullet {
+	text-align:center;
+}
+
+#black-pen {
+	background:black;
+}
+
+#blue-pen {
+	background:blue;
+}
+
+#red-pen {
+	background:red;
+}
+
+#green-pen {
+	background:green;
+}
+
+
